--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/.next
+/.vscode/settings.json
 /node_modules
 /.pnp
 .pnp.js
+
+
+.env
 
 # testing
 /coverage
